--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-compass": "^2.1.0",
+    "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^2.2.0"
   }
 }
