--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gulp-compass": "^2.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^2.2.0"
+  },
+  "dependencies": {
+    "gulp-ruby-sass": "^2.0.6"
   }
 }
