--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-sass": "^2.2.0"
   },
   "dependencies": {
-    "gulp-ruby-sass": "^2.0.6"
+    "gulp-ruby-sass": "^2.0.6",
+    "http-server": "^0.9.0"
   }
 }
